--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # No subir los libros (PDFs)
 OAPEN_PDFs/
 
+# Excluir archivo JSON grande
+ScriptsData/cybersecurity_books_filtered.json
+
 # === Python ===
 __pycache__/
 *.py[cod]
@@ -39,7 +42,6 @@ htmlcov/
 
 # === Node (if present in future) ===
 node_modules/
-
 
 # === Archives ===
 *.zip
