--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ torchvision>=0.20.0
 torchaudio>=2.5.0
 numpy>=1.21.0,<2.0.0
 scikit-learn>=1.0.0,<1.6.0
+rank-bm25>=0.2.2
 
 # Procesamiento de documentos
 langchain>=0.3.0
