Actualizar train_lora.py, agregar requirements_ft.txt y actualizar .gitignore para excluir venv_ft/ y models/

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ __pycache__/
 
 # Virtual environments
 venv/
+venv_ft/
 .env/
 .env*/
 .venv/
@@ -98,6 +99,7 @@ node_modules/
 *.safetensors
 *.bin
 *.safetensors
+models/
 
 # Datasets grandes
 datasets/
